--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -544,8 +544,8 @@ input:focus {
     font-size: 0.8em;
   }
   .results-img {
-    width: 170px !important;
-    height: 310px !important;
+    width: 150px !important;
+    height: 280px !important;
   }
 }
 
@@ -700,8 +700,22 @@ input:focus {
 
 @media (max-width: 420px) {
   .results-img {
-    width: 230px !important;
-    height: 370px !important;
+    width: 130px !important;
+    height: 200px !important;
+  }
+
+  .results-rating {
+    font-size: 0.65em;
+  }
+
+  .results-brand {
+    font-size: 0.75em;
+    margin-bottom: 0px;
+  }
+
+  .results-color {
+    font-size: 0.85em;
+    margin-top: 0px;
   }
 }
 
